--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Perpus
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -8,13 +8,13 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=oracle
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_PORT=1521
+DB_DATABASE=perpus
+DB_USERNAME=perpus
 DB_PASSWORD=
-DB_SERVICE_NAME=
+DB_SERVICE_NAME=orcl
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
